Cros Configuration